--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "vue-j-calendar",
-  "version": "1.0.2",
+  "version": "1.0.3",
   "description": "vue js date time picker without jquery",
   "main": "src/index.js",
   "keywords": [
@@ -12,7 +12,8 @@
   ],
   "author": "Amin nazari <aminnazari55@gmail.com>",
   "contributors": [
-    "Hooman naghiee <me@hooman.pro> (hooman.pro)"
+    "Hooman naghiee <me@hooman.pro> (hooman.pro)",
+    "Vahid davari <info.davari@gmail.com>"
   ],
   "license": "MIT",
   "dependencies": {
